--- a/src/index.css
+++ b/src/index.css
@@ -25,16 +25,20 @@ body {
   color: white;
 }
 
-.scrollbar::-webkit-scrollbar {
+body::-webkit-scrollbar, .scrollbar::-webkit-scrollbar {
   width: 0.5rem;
 }
 
-.scrollbar::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track ,.scrollbar::-webkit-scrollbar-track {
   background-color: transparent;
 }
 
 .scrollbar::-webkit-scrollbar-thumb {
   background-color: gray;
+  cursor: default;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(72, 72, 72);
   cursor: default;
 }
 
